[package]
name = "meow"
author = "Mariano Nicolini"
version = "0.1.0"
edition = "2021"
description = "This program is the good fla!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }

